@@ -9,23 +9,23 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenHasNotK2department() {
-        List<String> deps = Arrays.asList(
+        List<String> deps = List.of(
                 "K2/SK1"
         );
         boolean expected = Departments.fillGaps(deps).contains("K2");
@@ -34,7 +34,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenDepartmentsSortAsc() {
-        List<String> deps = Arrays.asList(
+        List<String> deps = List.of(
                 "K2",
                 "K2/SK1",
                 "K1",
@@ -42,7 +42,7 @@ public class DepartmentsTest {
                 "K1/SK2"
         );
 
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
@@ -55,14 +55,14 @@ public class DepartmentsTest {
 
     @Test
     public void whenDepartmentsSortDesc() {
-        List<String> deps = Arrays.asList(
+        List<String> deps = List.of(
                 "K1",
                 "K2",
                 "K1/SK1/SSK2",
                 "K1/SK2",
                 "K2/SK1"
         );
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K2",
                 "K2/SK1",
                 "K1",
