@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -28,7 +28,7 @@ public class NotifyAccountTest {
 
     @Test
     public void sentDub() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("8212", "Kapustin Dmitrii", "n4488nj6M"),
                 new Account("8212", "Kapustin Dmitrii", "n4488nj6M"),
                 new Account("8212", "Kapustin Dmitrii", "n4488nj6M"),
@@ -37,7 +37,7 @@ public class NotifyAccountTest {
                 new Account("123", "Petr Arsentev", "eDer3432f")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("8212", "Kapustin Dmitrii", "n4488nj6M"),
                         new Account("123", "Petr Arsentev", "eDer3432f")
                 )
